add list of recruiter page and placement page

--- a/directormsg.html
+++ b/directormsg.html
@@ -172,10 +172,10 @@
                             <ul class="submenu sub__style">
                                 <li><a href="directormsg.html">Director's Message</a></li>
                                 <li><a href="training&placement.html">Training And Placement Cell</a></li>
-                                <li><a href="academic-area.html">Placement Process</a></li>
-                                <li><a href="campus-life.html">Placement Track Record</a></li>
-                                <li><a href="scholarship.html">List Of Recruiters</a></li>
-                                <li><a href="tution-fee.html">Current Year Placement</a></li>
+                                <li><a href="placementProcess.html">Placement Process</a></li>
+                                <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
+                                <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
+                                <li><a href="currentYearOfPlacement.html">Current Year Placement</a></li>
                                 <li class="submenu-item has-child hoverarrow"><a
                                         href="javascript:void(0)">E-Brochure</a>
                                     <ul class="submenu submenu--level2">
@@ -389,10 +389,10 @@
                         <ul class="mobile-submenu">
                             <li><a href="directormsg.html">Director's Message</a></li>
                             <li><a href="training&placement.html">Training And Placement Cell</a></li>
-                            <li><a href="academic-area.html">Placement Process</a></li>
-                            <li><a href="campus-life.html">Placement Track Record</a></li>
-                            <li><a href="scholarship.html">List Of Recruiters</a></li>
-                            <li><a href="tution-fee.html">Current Year Placement</a></li>
+                            <li><a href="placementProcess.html">Placement Process</a></li>
+                            <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
+                            <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
+                            <li><a href="currentYearOfPlacement.html">Current Year Placement</a></li>
                             <li class="mobile-dropdown">
                                 <div class="mobile-link mobile-toggle submenu-toggle">
                                     E- Brochure
