--- a/placementProcess.html
+++ b/placementProcess.html
@@ -171,7 +171,7 @@
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PLACEMENT</a>
                             <ul class="submenu sub__style">
                                 <li><a href="directormsg.html">Director's Message</a></li>
-                                <li><a href="admission.html">Training And Placement Cell</a></li>
+                                <li><a href="training&placement.html">Training And Placement Cell</a></li>
                                 <li><a href="placementProcess.html">Placement Process</a></li>
                                 <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
                                 <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
@@ -415,7 +415,7 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Management and Commerce</a></li>
+                            <li><a href="faculty.html">Management and Commerce</a></li>
                             <li><a href="admission.html">Computer Science</a></li>
                             <li><a href="academic-area.html">Visiting Faculty International</a></li>
                             <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
@@ -596,12 +596,12 @@
     </header>
 
     <!-- Start Pages Banner Area -->
-    <div class="pages-banner-area position-relative">
+    <div class="placementpage pages-banner-area position-relative">
         <div class="container-fluid">
             <div class="row gy-4">
                 <div class="col-lg-6">
                     <div class="pages-title">
-                        <h2>Management and Commerce Faculty</h2>
+                        <h2>Placement Process</h2>
                         <ul class="list-unstyled ps-0 mb-0">
                             <li class="d-inline-block">
                                 <a class="text-decoration-none" href="index.html">
@@ -609,167 +609,117 @@
                                 </a>
                             </li>
                             <li class="d-inline-block">
-                                Faculty
+                                Placement Process
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="pages-image">
-                        <img src="/public/images/campus/banner1.JPG" alt="pages-image" class="editImage">
+                        <img src="public/images/campus/banner1.JPG" alt="pages-image" class="editImage">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="shape-7">
-            <img src="public/images/shape-7.png" alt="shape">
-        </div>
+
     </div>
     <!-- End Pages Banner Area -->
 
-    <div class="rts-campus bg-white v_2 pb-5 pt-4">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/1/thumbnail/12689Profpnjha.jpg"
-                                alt="img">
-
+    <!-- teacher's section -->
+    <section class="placementTeacher py-5">
+        <div class="section-heading text-center">
+            <h1 class=" gradient-one wow fadeInUp" data-wow-delay=".7s">Placement Process<br></h1>
+        </div>
+        <div class="container pb-10">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <img src="public/images/banner/preptalk.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-md-6 d-flex align-items-center flex-column justify-content-center">
+                    <h2 class=" gradient-one wow fadeInUp" data-wow-delay=".4s">Pre Placement Talk</h2>
+                    <div class="content wow fadeInUp justify" data-wow-delay=".6s">
+                        The pre placement talks provide a valuable opportunity to our students to have an
+                        interaction with the corporate representative. Through this process, they come to know about
+                        the company offerings including expected job profile, job locations, salary components and
+                        the probable career growth paths available. Companies give a brief presentation, followed by
+                        the Q&A session of students.
+                    </div>
+                    <div class="stats my-5 my-md-1 d-flex  justify-content-around py-md-5 align-items-center ">
+                        <div style="border-right: 2px solid grey; padding-right:30px; text-align: center;"
+                            class="wow fadeInUp" data-wow-delay=".4s">
+                            <h3 class="fw-bold mb-0 fs-sm-28">4.75 LPA</h3>
+                            <p class="mb-0 f-sm-20">Average Salary Package</p>
                         </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Pinak Nath Jha</h3>
-                            <p><i class="fa-regular fa-envelope"></i> director@smsvaranasi.com</p>
-                            <p>Director</p>
-
-
+                        <div style="padding-left:30px; text-align: center;" class="wow fadeInUp" data-wow-delay=".7s">
+                            <h3 class="fw-bold mb-0 fs-sm-28">10.02 LPA</h3>
+                            <p class="mb-0 f-sm-20">Highest Salary Package</p>
                         </div>
+
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
-                    <div class="team-card-items mt-0  text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/2/thumbnail/85674sandeep-singh.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Sandeep Singh</h3>
-                            <p><i class="fa-regular fa-envelope"></i> sandeepsingh@smsvaranasi.com</p>
-                            <p>Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/3/thumbnail/78932rk.jpeg" alt="img">
-                        </div>
-                        <div class="team-content">
-                            <div class="team-content">
-                                <h3 class="color-yellow">Prof. Raj Kumar Singh</h3>
-                                <p><i class="fa-regular fa-envelope"></i> rksingh@smsvaranasi.com</p>
-                                <p>Professor</p>
-
-
+            </div>
+        </div>
+        <section class="about-placement-section"
+            style="background-image: url(public/images/banner/placement-bg.webp); background-size: cover; background-position: 50% 64%;">
+            <div class="container">
+                <div class="row d-flex justify-content-end">
+                    <div class="col-md-12 col-lg-6">
+                        <div class="about-placement_info text-light">
+                            <div class="main-heading">
+                                <h2 class="mb-3 wow fadeInUp" data-wow-delay=".4s">SMS Varanasi<br> <span
+                                        class="text-yellow ms-sm-3"> Final Placement</span>
+                                </h2>
                             </div>
+                            <p>Our endeavor is to ensure as best placement as possible for all out-going students.
+                                This is an extremely important activity of the institutes as its brand image
+                                depends, to quite an appreciable extent, on the quality of placement. Good placement
+                                not only enhances the reputation of the institute, it also infuses a high degree of
+                                confidence in the students at the time of admission.</p>
+                            <p>The process commences through interaction with different organizations of repute who
+                                appoint management graduates from premier / reputed management institutes regularly.
+                                We maintain a database of the organizations where our students had been placed
+                                earlier and update information on a continuous basis.</p>
+                            <p>We invite these organizations to visit our institute and hold on-campus interview,
+                                group discussion and personal interview. They make Pre-Placement Talk and after
+                                students opting for them, they carry out the selection process which sometimes
+                                includes group discussion and personal interview. Based on the performance, the
+                                selected students are issued placement offers. Some of the students get
+                                Pre-Placement offer immediately after their summer training. The students join the
+                                organization on due dates after completion of the entire course and appearing in the
+                                final examination.</p>
+                            <p class="mb-0">We are happy to note that the quality of placement has been improving
+                                continuously. However, our quest for excellence continues and we are not at all
+                                complacent.</p>
 
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/4/thumbnail/18645sanjay.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Sanjay Saxena</h3>
-                            <p><i class="fa-regular fa-envelope"></i> sanjaysaxena@smsvaranasi.com</p>
-                            <p>Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
-                    <div class="team-card-items mt-0  text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/5/thumbnail/52800avinash.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Avinash Chandra Supkar</h3>
-                            <p><i class="fa-regular fa-envelope"></i> avinashsupkar@smsvaranasi.com</p>
-                            <p>Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/6/thumbnail/25233pallavi.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Pallavi Pathak</h3>
-                            <p><i class="fa-regular fa-envelope"></i> pallavipathak@smsvaranasi.com </p>
-                            <p>Professor</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/7/thumbnail/90094amitabh.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Amitabh Pandey</h3>
-                            <p><i class="fa-regular fa-envelope"></i> amitabhpandey@smsvaranasi.com</p>
-                            <p>Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
-                    <div class="team-card-items mt-0  text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/9/thumbnail/26287Atish-khadse.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Mr. Atish Khadse</h3>
-                            <p><i class="fa-regular fa-envelope"></i> atishkhadse@smsvaranasi.com</p>
-                            <p>Associate Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/10/thumbnail/46666bhawana.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Dr. Bhavana Singh</h3>
-                            <p><i class="fa-regular fa-envelope"></i> bhavanasingh@smsvaranasi.com </p>
-                            <p>Associate Professor</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <div class="container" style="padding-top: 40px;">
+            <div class="row">
 
+                <div class="col-12 col-md-6 d-flex align-items-center flex-column justify-content-center">
+                    <h2 class="section-title gradient-one wow fadeInUp" data-wow-delay=".5s">Summer Placement<br>
+                    </h2>
+                    <div class="content wow fadeInUp justify" data-wow-delay=".8s">
+                        Students are required to undergo summer placement for 6-8 weeks after completing the second
+                        semester. The process starts with interaction with different organizations of repute who
+                        select management graduates from premier / reputed management institutes regularly. We
+                        maintain a database of the organizations where our students had been/can be placed for
+                        summer training. Further, every year we progressively add the names of other organizations
+                        that are interested in allowing our students to undertake summer training in their
+                        organizations.
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 py-3  wow fadeInUp " data-wow-delay=".7s">
+                    <img src="public/images/banner/recruiterBanner.jpg" alt="" class="img-fluid "
+                        style="border-radius: 10px;">
+                </div>
+            </div>
         </div>
-    </div>
-
+    </section>
+    <!-- teacher's section -->
 
     <!-- Footer -->
     <footer class="footer text-white pt-16 pb-8">
