--- a/placementTrackRecord.html
+++ b/placementTrackRecord.html
@@ -171,7 +171,7 @@
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PLACEMENT</a>
                             <ul class="submenu sub__style">
                                 <li><a href="directormsg.html">Director's Message</a></li>
-                                <li><a href="admission.html">Training And Placement Cell</a></li>
+                                <li><a href="training&placement.html">Training And Placement Cell</a></li>
                                 <li><a href="placementProcess.html">Placement Process</a></li>
                                 <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
                                 <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
@@ -415,7 +415,7 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Management and Commerce</a></li>
+                            <li><a href="faculty.html">Management and Commerce</a></li>
                             <li><a href="admission.html">Computer Science</a></li>
                             <li><a href="academic-area.html">Visiting Faculty International</a></li>
                             <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
@@ -596,12 +596,12 @@
     </header>
 
     <!-- Start Pages Banner Area -->
-    <div class="pages-banner-area position-relative">
+    <div class="placementTrackpage pages-banner-area position-relative" >
         <div class="container-fluid">
             <div class="row gy-4">
                 <div class="col-lg-6">
                     <div class="pages-title">
-                        <h2>Management and Commerce Faculty</h2>
+                        <h2>Placement Track Record</h2>
                         <ul class="list-unstyled ps-0 mb-0">
                             <li class="d-inline-block">
                                 <a class="text-decoration-none" href="index.html">
@@ -609,14 +609,14 @@
                                 </a>
                             </li>
                             <li class="d-inline-block">
-                                Faculty
+                                Placement Track Record
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="pages-image">
-                        <img src="/public/images/campus/banner1.JPG" alt="pages-image" class="editImage">
+                        <img src="public/images/campus/banner1.JPG" alt="pages-image" class="editImage">
                     </div>
                 </div>
             </div>
@@ -627,149 +627,134 @@
     </div>
     <!-- End Pages Banner Area -->
 
-    <div class="rts-campus bg-white v_2 pb-5 pt-4">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/1/thumbnail/12689Profpnjha.jpg"
-                                alt="img">
+    <section class="placementTeacher py-5" style="background-image: url('public/images/hiringDrivesBg.svg');">
+        <div class="section-heading text-center ">
 
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Pinak Nath Jha</h3>
-                            <p><i class="fa-regular fa-envelope"></i> director@smsvaranasi.com</p>
-                            <p>Director</p>
+            <h1 class=" gradient-one wow fadeInUp" data-wow-delay=".7s">Placement Track Record <br>
+            </h1>
+        </div>
+        <!-- main section -->
+        <div class="container pt-5">
+            <p class="fs-5 justify color-blue">The Placement record at School of Management Sciences over the past few
+                years has
+                been
+                exemplary as acknowledged by the top grade corporate houses of the country, especially in MBA
+                Courses. SMS, Varanasi has been facilitator in inviting frontline corporate houses to its campus,
+                for student-industry interaction and final placement of students in various corporate houses. Our
+                students have proved their metal, as per corporate expectations..</p>
 
-
-                        </div>
+            <!-- table starts here -->
+            <section class="tableSection2 py-4 my-3" id="tableSection">
+                <div class="background-layer"></div>
+                <div class=" tableContainer2">
+                    <div class="Tabledetails pb-4 text-center">
+                        <h3>This can be understood as per following Pay Package Table of last few
+                            years.</h3>
                     </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
-                    <div class="team-card-items mt-0  text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/2/thumbnail/85674sandeep-singh.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Sandeep Singh</h3>
-                            <p><i class="fa-regular fa-envelope"></i> sandeepsingh@smsvaranasi.com</p>
-                            <p>Professor</p>
 
+                    <!-- Scrollable Table -->
+                    <div class="table-responsive2">
+                        <table class="text-light" id="salaryTable">
+                            <thead style="position: sticky; top: 0px;">
+                                <tr>
+                                    <th>Year</th>
+                                    <th>Average Salary Package</th>
+                                    <th>Highest Salary Package</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Your old data rows -->
+                                <tr>
+                                    <td>2011</td>
+                                    <td>3.25 lakhs</td>
+                                    <td>6.40 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2012</td>
+                                    <td>3.25 lakhs</td>
+                                    <td>6.40 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2013</td>
+                                    <td>3.25 lakhs</td>
+                                    <td>5.50 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2014</td>
+                                    <td>3.25 lakhs</td>
+                                    <td>5.75 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2015</td>
+                                    <td>3.50 lakhs</td>
+                                    <td>6.00 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2016 </td>
+                                    <td>3.75 lakhs</td>
+                                    <td>6.00 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2017 </td>
+                                    <td>3.50 lakhs</td>
+                                    <td>6.00 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2018 </td>
+                                    <td>3.25 lakhs</td>
+                                    <td>6.00 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2019</td>
+                                    <td>3.80 lakhs</td>
+                                    <td>6.25 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2020</td>
+                                    <td>3.75 lakhs</td>
+                                    <td>10 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2021</td>
+                                    <td>3.88 lakhs</td>
+                                    <td>10 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2022</td>
+                                    <td>3.88 lakhs</td>
+                                    <td>12.5 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2023</td>
+                                    <td>4.81 lakhs</td>
+                                    <td>7.95 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2024</td>
+                                    <td>4.50 lakhs</td>
+                                    <td>8.00 lakhs</td>
+                                </tr>
+                                <tr>
+                                    <td>2025 </td>
+                                    <td>4.75 lakhs</td>
+                                    <td>10.02 lakhs</td>
+                                </tr>
 
-                        </div>
+                            </tbody>
+                        </table>
                     </div>
+                    <!-- End Table -->
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/3/thumbnail/78932rk.jpeg" alt="img">
-                        </div>
-                        <div class="team-content">
-                            <div class="team-content">
-                                <h3 class="color-yellow">Prof. Raj Kumar Singh</h3>
-                                <p><i class="fa-regular fa-envelope"></i> rksingh@smsvaranasi.com</p>
-                                <p>Professor</p>
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/4/thumbnail/18645sanjay.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Sanjay Saxena</h3>
-                            <p><i class="fa-regular fa-envelope"></i> sanjaysaxena@smsvaranasi.com</p>
-                            <p>Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
-                    <div class="team-card-items mt-0  text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/5/thumbnail/52800avinash.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Avinash Chandra Supkar</h3>
-                            <p><i class="fa-regular fa-envelope"></i> avinashsupkar@smsvaranasi.com</p>
-                            <p>Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/6/thumbnail/25233pallavi.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Pallavi Pathak</h3>
-                            <p><i class="fa-regular fa-envelope"></i> pallavipathak@smsvaranasi.com </p>
-                            <p>Professor</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/7/thumbnail/90094amitabh.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Prof. Amitabh Pandey</h3>
-                            <p><i class="fa-regular fa-envelope"></i> amitabhpandey@smsvaranasi.com</p>
-                            <p>Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
-                    <div class="team-card-items mt-0  text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/9/thumbnail/26287Atish-khadse.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Mr. Atish Khadse</h3>
-                            <p><i class="fa-regular fa-envelope"></i> atishkhadse@smsvaranasi.com</p>
-                            <p>Associate Professor</p>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
-                    <div class="team-card-items mt-0 text-center">
-                        <div class="team-image">
-                            <img src="https://smsvaranasi.com/uploads/staff_images/10/thumbnail/46666bhawana.jpg"
-                                alt="img">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="color-yellow">Dr. Bhavana Singh</h3>
-                            <p><i class="fa-regular fa-envelope"></i> bhavanasingh@smsvaranasi.com </p>
-                            <p>Associate Professor</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </section>
 
         </div>
-    </div>
+        <!-- companies -->
 
+        <!-- chart.js -->
+        <div class="container bg-white py-5">
+            <canvas id="barChart" height="120"></canvas>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer text-white pt-16 pb-8">
@@ -1076,7 +1061,7 @@
     </script>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11.1.0/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
@@ -1139,8 +1124,83 @@
         });
     </script>
 
+    <script>
+        const table = document.getElementById("salaryTable");
+        const rows = table.querySelectorAll("tbody tr");
 
+        const years = [];
+        const avgSalary = [];
+        const highSalary = [];
 
+        rows.forEach(row => {
+            const cells = row.querySelectorAll("td");
+
+            years.push(cells[0].innerText);
+
+            avgSalary.push(
+                parseFloat(cells[1].innerText.replace("lakhs", "").trim())
+            );
+
+            highSalary.push(
+                parseFloat(cells[2].innerText.replace("lakhs", "").trim())
+            );
+        });
+
+        const ctx = document.getElementById("barChart");
+
+        new Chart(ctx, {
+            type: "bar",
+            data: {
+                labels: years,
+                datasets: [
+                    {
+                        label: "Average Salary (Lakhs)",
+                        data: avgSalary,
+                        backgroundColor: "rgba(255, 99, 132, 0.45)",
+                        borderColor: "rgb(255, 99, 132)",
+                        borderWidth: 2,
+                        borderRadius: 20,
+                        borderSkipped: false
+                    },
+                    {
+                        label: "Highest Salary (Lakhs)",
+                        data: highSalary,
+                        backgroundColor: "rgba(54, 162, 235, 0.45)",
+                        borderColor: "rgb(54, 162, 235)",
+                        borderWidth: 2,
+                        borderRadius: 6,
+                        borderSkipped: false
+                    }
+                ]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: "Placement Salary Trend (2011–2025)"
+                    },
+                    legend: {
+                        position: "top"
+                    }
+                },
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                        title: {
+                            display: true,
+                            text: "Salary (Lakhs)"
+                        }
+                    },
+                    x: {
+                        grid: {
+                            display: false
+                        }
+                    }
+                }
+            }
+        });
+    </script>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
@@ -1198,7 +1258,6 @@
         });
     </script>
 
-
     <script>
         document.querySelectorAll('.submenu-item > a').forEach(link => {
             link.addEventListener('click', function (e) {
@@ -1221,8 +1280,6 @@
             });
         });
     </script>
-
-
 
 </body>
 
