--- a/programs.html
+++ b/programs.html
@@ -172,10 +172,10 @@
                             <ul class="submenu sub__style">
                                 <li><a href="directormsg.html">Director's Message</a></li>
                                 <li><a href="training&placement.html">Training And Placement Cell</a></li>
-                                <li><a href="academic-area.html">Placement Process</a></li>
-                                <li><a href="campus-life.html">Placement Track Record</a></li>
-                                <li><a href="scholarship.html">List Of Recruiters</a></li>
-                                <li><a href="tution-fee.html">Current Year Placement</a></li>
+                                <li><a href="placementProcess.html">Placement Process</a></li>
+                                <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
+                                <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
+                                <li><a href="currentYearOfPlacement.html">Current Year Placement</a></li>
                                 <li class="submenu-item has-child hoverarrow"><a
                                         href="javascript:void(0)">E-Brochure</a>
                                     <ul class="submenu submenu--level2">
@@ -389,10 +389,10 @@
                         <ul class="mobile-submenu">
                             <li><a href="directormsg.html">Director's Message</a></li>
                             <li><a href="training&placement.html">Training And Placement Cell</a></li>
-                            <li><a href="academic-area.html">Placement Process</a></li>
-                            <li><a href="campus-life.html">Placement Track Record</a></li>
-                            <li><a href="scholarship.html">List Of Recruiters</a></li>
-                            <li><a href="tution-fee.html">Current Year Placement</a></li>
+                            <li><a href="placementProcess.html">Placement Process</a></li>
+                            <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
+                            <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
+                            <li><a href="currentYearOfPlacement.html">Current Year Placement</a></li>
                             <li class="mobile-dropdown">
                                 <div class="mobile-link mobile-toggle submenu-toggle">
                                     E- Brochure
@@ -957,9 +957,7 @@
                                                     <div class="section__title-wrapper ">
 
                                                         <h2 class="section__title text-center color-blue">
-                                                            SMS SCHOLARSHIP SCHEMES & AWARD FOR
-                                                            EXISTING
-                                                            STUDENTS</h2>
+                                                            SMS SCHOLARSHIP SCHEMES & AWARD FOR EXISTING STUDENTS</h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -967,7 +965,7 @@
                                                 <div class="col-12">
                                                     <div class="course__slider swiper-container overflow-hidden">
                                                         <div class="swiper-wrapper">
-                                                            <div class="course__item-2 swiper-slide transition-3 white-bg mb-3 fix"
+                                                            <div class="course__item-2 swiper-slide transition-3 white-bg m-1 fix"
                                                                 style="height:-webkit-fill-available;">
                                                                 <div class="course__thumb-2 w-img fix">
                                                                     <a href="course-details.html">
@@ -1004,7 +1002,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="course__item-2 swiper-slide transition-3 white-bg mb-3 fix"
+                                                            <div class="course__item-2 swiper-slide transition-3 white-bg m-1 fix"
                                                                 style="height:-webkit-fill-available;">
                                                                 <div class="course__thumb-2 w-img fix">
                                                                     <a href="course-details.html">
@@ -1944,7 +1942,8 @@
                                             programme</p>
                                         <ol>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Generic and Domain Knowledge :
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Generic and Domain Knowledge :
                                                     </span>Ability
                                                     to articulate, illustrate, analyze, synthesize and apply the
                                                     knowledge of
@@ -1953,7 +1952,8 @@
                                                     real-world complex business issues</p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Problem Solving & Innovation :
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Problem Solving & Innovation :
                                                     </span>
                                                     Ability to Identify, formulate and provide innovative solution
                                                     frameworks to
@@ -1963,7 +1963,8 @@
                                                     techniques.</p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Critical Thinking : </span> Ability
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Critical Thinking : </span> Ability
                                                     to
                                                     conduct investigation of multidimensional business problems using
                                                     research-based knowledge and research methods to arrive at data
@@ -1971,7 +1972,8 @@
                                                     decisions.</p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Effective Communication :</span>
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Effective Communication :</span>
                                                     Ability to
                                                     effectively communicate in cross-cultural settings, in technology
                                                     mediated
@@ -1980,7 +1982,8 @@
                                                 </p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Leadership and Teamwork :
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Leadership and Teamwork :
                                                     </span>Ability to
                                                     collaborate in an organizational context and across organizational
                                                     boundaries
@@ -1989,7 +1992,8 @@
                                                     optimize outcomes for all stakeholders.</p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Entrepreneurship : </span>Ability to
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Entrepreneurship : </span>Ability to
                                                     identify
                                                     entrepreneurial opportunities and leverage managerial & leadership
                                                     skills for
@@ -1998,7 +2002,8 @@
                                                     family businesses.</p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Social Responsiveness and Ethics :
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Social Responsiveness and Ethics :
                                                     </span>Ability to exhibit a broad appreciation of the ethical and
                                                     value
                                                     underpinnings of managerial choices in a political, cross-cultural,
@@ -2007,14 +2012,16 @@
                                                     ethical and unethical behaviors & act with integrity.</p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Employability : </span>Students
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Employability : </span>Students
                                                     should be
                                                     groomed in such a way that he/she should be easily employable and
                                                     have the
                                                     capacity to adapt to the situation at ease.</p>
                                             </li>
                                             <li>
-                                                <p><i class="fa-solid fa-feather"></i> <span style="font-weight: 700;">Life-Long Learning : </span>Ability
+                                                <p><i class="fa-solid fa-feather"></i> <span
+                                                        style="font-weight: 700;">Life-Long Learning : </span>Ability
                                                     to
                                                     operate independently in a new environment, acquire new knowledge
                                                     and skills
