--- a/training&placement.html
+++ b/training&placement.html
@@ -172,10 +172,10 @@
                             <ul class="submenu sub__style">
                                 <li><a href="directormsg.html">Director's Message</a></li>
                                 <li><a href="training&placement.html">Training And Placement Cell</a></li>
-                                <li><a href="academic-area.html">Placement Process</a></li>
-                                <li><a href="campus-life.html">Placement Track Record</a></li>
-                                <li><a href="scholarship.html">List Of Recruiters</a></li>
-                                <li><a href="tution-fee.html">Current Year Placement</a></li>
+                                <li><a href="placementProcess.html">Placement Process</a></li>
+                                <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
+                                <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
+                                <li><a href="currentYearOfPlacement.html">Current Year Placement</a></li>
                                 <li class="submenu-item has-child hoverarrow"><a
                                         href="javascript:void(0)">E-Brochure</a>
                                     <ul class="submenu submenu--level2">
@@ -389,10 +389,10 @@
                         <ul class="mobile-submenu">
                             <li><a href="directormsg.html">Director's Message</a></li>
                             <li><a href="training&placement.html">Training And Placement Cell</a></li>
-                            <li><a href="academic-area.html">Placement Process</a></li>
-                            <li><a href="campus-life.html">Placement Track Record</a></li>
-                            <li><a href="scholarship.html">List Of Recruiters</a></li>
-                            <li><a href="tution-fee.html">Current Year Placement</a></li>
+                            <li><a href="placementProcess.html">Placement Process</a></li>
+                            <li><a href="placementTrackRecord.html">Placement Track Record</a></li>
+                            <li><a href="list_of_recruiter.html">List Of Recruiters</a></li>
+                            <li><a href="currentYearOfPlacement.html">Current Year Placement</a></li>
                             <li class="mobile-dropdown">
                                 <div class="mobile-link mobile-toggle submenu-toggle">
                                     E- Brochure
@@ -621,14 +621,16 @@
                 </div>
             </div>
         </div>
-       
+
     </div>
     <!-- End Pages Banner Area -->
 
     <!-- teacher's section -->
-    <section class="placementTeacher py-5 overflow-hidden" style="background-image: url('public/images/hiringDrivesBg.svg');">
+    <section class="placementTeacher py-5 overflow-hidden"
+        style="background-image: url('public/images/hiringDrivesBg.svg');">
 
-        <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue pb-4 pt-3 text-center">Meet Our Training Placement Faculty</h2>
+        <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue pb-4 pt-3 text-center">Meet Our Training
+            Placement Faculty</h2>
 
         <div class="container pt-2">
             <div class="row g-1">
@@ -677,7 +679,7 @@
                 </div>
                 <div class="col-12">
                     <div class="faculty-card">
-                        <div class="faculty-content"data-aos="fade-right" data-aos-delay="400">
+                        <div class="faculty-content" data-aos="fade-right" data-aos-delay="400">
                             <h4 class="underlineHover wow fadeInUp">Mr. Rahul Singh </h4>
                             <p class="m-0">DGM-Training & Placement Cell</p>
                             <p class="m-0"><i class="fa-regular fa-envelope"></i> <b> placement@smsvaranasi.com</b>
@@ -692,14 +694,14 @@
                             </p>
                         </div>
 
-                        <div class="faculty-image"data-aos="fade-left" data-aos-delay="400">
+                        <div class="faculty-image" data-aos="fade-left" data-aos-delay="400">
                             <img src="https://smsvaranasi.com/uploads/page_images/14266rahul.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="faculty-card reverse">
-                        <div class="faculty-content"data-aos="fade-left" data-aos-delay="400">
+                        <div class="faculty-content" data-aos="fade-left" data-aos-delay="400">
                             <h4 class="underlineHover wow fadeInUp">Dr. Amitabh Pandey</h4>
                             <p class="m-0">Professor, Member(Training & Placement Cell)</p>
                             <p class="m-0"><i class="fa-regular fa-envelope"></i> <b> placement@smsvaranasi.com</b>
@@ -714,14 +716,14 @@
                             </p>
                         </div>
 
-                        <div class="faculty-image"data-aos="fade-right" data-aos-delay="400">
+                        <div class="faculty-image" data-aos="fade-right" data-aos-delay="400">
                             <img src="https://smsvaranasi.com/uploads/page_images/80841amitabhpandey.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="faculty-card">
-                        <div class="faculty-content"data-aos="fade-right" data-aos-delay="400">
+                        <div class="faculty-content" data-aos="fade-right" data-aos-delay="400">
                             <h4 class="underlineHover wow fadeInUp">Dr. Radha Raman Chandan</h4>
                             <p class="m-0">Associate Professor, Member(Training & Placement Cell-MCA)</p>
                             <p class="m-0"><i class="fa-regular fa-envelope"></i> <b> placement@smsvaranasi.com</b>
@@ -739,14 +741,14 @@
                             </p>
                         </div>
 
-                        <div class="faculty-image"data-aos="fade-left" data-aos-delay="400">
+                        <div class="faculty-image" data-aos="fade-left" data-aos-delay="400">
                             <img src="https://smsvaranasi.com/uploads/staff_images/55/thumbnail/19895radha.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="faculty-card reverse">
-                        <div class="faculty-content"data-aos="fade-left" data-aos-delay="400">
+                        <div class="faculty-content" data-aos="fade-left" data-aos-delay="400">
                             <h4 class="underlineHover wow fadeInUp">Mr. Jai Prakash Pandey</h4>
                             <p class="m-0">Training & Placement Executive</p>
                             <p class="m-0"><i class="fa-regular fa-envelope"></i> <b>placement@smsvaranasi.com</b>
@@ -759,7 +761,7 @@
                             </p>
                         </div>
 
-                        <div class="faculty-image"data-aos="fade-right" data-aos-delay="400">
+                        <div class="faculty-image" data-aos="fade-right" data-aos-delay="400">
                             <img src="https://smsvaranasi.com/uploads/page_images/48253jp.gif" alt="">
                         </div>
                     </div>
